# NEO-RT

./: .fortls.json  .fprettify  .git-blame-ignore-revs  .gitignore  CLAUDE.md  CMakeLists.txt  CMakeSources.txt  LICENSE  Makefile  PLAN_POTATO.md  ProjectConfig.cmake.in  README.md  README.txt  STRATEGY_THICK_ORBIT.md  TODO.md  WORKING_DIRECTORY_SETUP.md  build_output.txt  collis_nbi.f90  common.f90  convert_to_asdex.py  debug_params.f90  do_magfie_neo.f90  do_magfie_standalone.f90  doc.md  driftorbit.f90  driftorbit.in  driftorbit_test.f90  driftorbit_test.in  field_divB0.inp  index.md  main.f90  nbi_torque.f90  neo.in  orbit.f90  orbit_test.f90  pytest.ini  requirements.txt  run_tests.sh  setup-venv.sh  shaing.f90  (+3 more)
MC/CODE/: CMakeLists.txt  CMakeSources.txt  ProjectConfig.cmake.in  alpha_lifetime_mod.f90  field.f90  inter_interfaces.f90  magfie.f90  nbi_torque.f90  neo_magfie.f90  neo_modules.f90  neo_sub.f90  settings.f90  sparse_mod.f90  sub_alpha_lifetime.f90  test_orbit.f90  vvnqiwkas.f
POTATO/: CMakeLists.txt  LATEST  Makefile  README.md  run_potato.sh
POTATO/BOOZER_TO_EFIT/: Boozer_make.mk
POTATO/BOOZER_TO_EFIT/PLOT/: plot.jl
POTATO/BOOZER_TO_EFIT/SRC/: boozer_data_in_symfluxcoord.f90  boozer_to_efit.f90  extender.f90  file_reader_module.f90  integrator_stw.f90  intsrc.f90  mag_surf_module.f90  magdata_in_symfluxcoord.f90  plag_coeff.f90  search_grid_mod.f90  window_filter.f90  write_eqfile.f90
POTATO/RUN/: field_divB0.inp  potato.in  ttt.bat
POTATO/SRC/: CMakeLists.txt  alpha_lifetime_mod.f90  amn_mod.f90  bdivfree.f90  bdivfree_mod.f90  bmod_pert.f90  box_counting.f90  chamb_divB0.f90  check_neo2_profiles.f90  collis_nbi.f90  eqmagprofs.f90  equimoments.f90  extract_fluxcoord_mod.f90  field_c_mod.f90  field_divB0.f90  field_eq_mod.f90  field_mod.f90  find_all_roots.f90  import_neo2_profiles.f90  input_files.f90  integrate_resline.f90  inthecore_mod.f90  level_set.f90  libneo_kinds.f90  logging_mod.f90  magfie_cyl.f90  math_constants.f90  minpack.f90  neo2_reader.f90  odeint_allroutines.f  period_mod.f90  potato_bmod_serializer_probe.f90  potato_coordinate_probe.f90  potato_drift_probe.f90  potato_hamiltonian_probe.f90  potato_input_mod.f90  potato_invariants_mod.f90  potato_poicut_probe.f90  potato_profile_serializer_probe.f90  potato_resonance_contour.f90  (+27 more)
POTATO/TEX/: equilmaxw.tex
POTATO/VER_1/RUN/: ttt.bat
POTATO/VER_1/SRC/: CMakeLists.txt  amn_mod.f90  bdivfree_mod.f90  chamb_divB0.f90  plot_orbit_set.f90  sub_alpha_lifetime.f90  sub_potato.f90  tt.f90  velo_ext.f90
POTATO/VER_11/RUN/: field_divB0.inp  ttt.bat
POTATO/VER_11/SRC/: CMakeLists.txt  bdivfree.f90  binsrc.f90  bmod_pert.f90  equimoments.f90  field_c_mod.f90  find_all_roots.f90  odeint_allroutines.f  resonant_int.f90  sample_matrix_out.f90  sub_potato.f90  theta_rz_mod.f90  tt.f90
POTATO/VER_12/: CMakeLists.txt
POTATO/VER_12/SRC/: CMakeLists.txt  bmod_pert.f90  box_counting.f90  eqmagprofs.f90  extract_fluxcoord_mod.f90  field_mod.f90  find_all_roots.f90  input_files.f90  period_mod.f90  profile_input.f90  resonant_int.f90  sample_matrix.f90  spline5_RZ.f90  sub_potato.f90  tt.f90  velo.f90
POTATO/VER_2/RUN/: ttt.bat
POTATO/tools/: boozer_npz_to_bmod_n.py  neo_rt_profiles_to_potato.py
VER_2/: field_divB0.inp  meson.build  meson_options.txt
VER_2/DOC/: Makefile  conf.py  design.rst  index.rst
VER_2/RUN/: field_divB0.inp  neo-rt.py  neo_rt_plot.py  run.sh
VER_2/SRC/: CMakeLists.txt  common.f90  main.f90  orbit.f90  orbit.pyf  orbit_full.f90  orbit_thin.f90  test.f90  test_orbit.f90  transport_full.f90  transport_thin.f90  transport_wide.f90  util.f90
examples/thick_orbit/: CMakeLists.txt  README.md  plot_bounce_time_real.f90  plot_canonical_frequencies.f90  plot_canonical_frequencies_demo.f90  plot_canonical_frequencies_real.f90  plot_frequencies_simple.f90  plot_orbit_rz.f90  plot_orbit_trajectories_real.f90  plot_resonance_analysis_real.f90  plot_runtime_comparison.f90  plot_torque_profiles_real.f90  plot_transport_coefficients_real.f90  thick_orbit_example.f90
port_rust/: Cargo.toml  build.rs
port_rust/src/: collis.rs  cvode.rs  driftorbit.rs  field.rs  freq.rs  lib.rs  magfie.rs  main.rs  orbit.rs  profiles.rs  resonance.rs  spline.rs  transport.rs
src/diag/: CMakeLists.txt  diag_atten_map.f90  diag_bounce_debug.f90  diag_bounce_nonlin.f90  diag_contrib_map.f90  diag_dnorm_breakdown.f90  diag_resonance_contour.f90  neort_diag.f90
test/: CMakeLists.txt  field.py  gen_circ_chartmap.py  omega_prime.py  plot_flux.m  plot_torque.py  probe_neort_eqdsk_coordinate.f90  probe_neort_eqdsk_drift.f90  probe_neort_perturbation_fourier_kernel.f90  probe_neort_perturbation_nfp.f90  test_attenuation_asymptotes.f90  test_bounce.f90  test_bounce_averaging_simple.f90  test_build_thick_orbits.cmake  test_chartmap_input.f90  test_cmake_thick_enabled.f90  test_cmake_thick_option.f90  test_collisional_layer.f90  test_drift_standalone.f90  test_efit_boozer_consistency.f90  test_efit_boozer_field_comparison.f90  test_efit_boozer_simple_comparison.f90  test_eqdsk_axis.f90  test_freq_scan.f90  test_frequencies.f90  test_frequencies.plt  test_frequency_dispatch.f90  test_harmonic_bounds.f90  test_input_switches.f90  test_linspace.f90  test_magfie_thick.f90  test_misc.f90  test_multi_init.f90  test_neort_lib.f90  test_nonlinear_contract.f90  test_omega_prime.f90  test_omega_prime.py  test_omege_prime.py  test_orbit_comparison.f90  test_orbit_trajectory_comparison.f90  (+44 more)
test/base/: driftorbit_test.in  in_file
test/fixtures/: circ_chartmap.nc
test/golden_record/: REGENERATION.md  create_minimal_input.py  ensure_golden.py  golden.h5  regenerate_golden.py  test_golden_record.py
test/nonlin/: driftorbit.in
test/orbit/: orbit_test.in  plot_bounce.py  plot_torque.py  run_driftorbit.py
test/resline/: plot_bounce.jl  plot_driftorbit_box.py  plot_magfie.py
test/reswidth/: driftorbit50.in
test/ripple_plateau/: driftorbit_test.in  plasma.in  test_collisional_layer.py  test_ripple_plateau.py
test/superbanana_plateau/: driftorbit_test.in  in_file  test_superbanana_plateau.py
(+260 files in other folders)
