option('orbit_freq',
  type : 'combo',
  value : 'full',
  choices : ['full', 'thin'],
  description : 'Type of orbit integration for computing canonical frequencies'
)

option('orbit_transp',
  type : 'combo',
  value : 'full',
  choices : ['full', 'thin'],
  description : 'Type of orbit integration for computing (non-local) transport'
)
