[package]
name = "neo_rt_rust"
version = "0.1.0"
edition = "2021"
description = "Rust port of NEO-RT (golden path). Uses SUNDIALS CVODE + LAPACK via FFI."

[[bin]]
name = "test_spline"
path = "src/bin/test_spline.rs"

[[bin]]
name = "test_field"
path = "src/bin/test_field.rs"

[lib]
name = "neo_rt_rust"
path = "src/lib.rs"

[profile.release]
opt-level = 2

[[bin]]
name = "test_profiles"
path = "src/bin/test_profiles.rs"
